--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="src/ojdbc8-23.5.0.24.07.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
